--- a/gnome_frontend/gtd-gnome.glade
+++ b/gnome_frontend/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Jan 12 22:34:28 2009 -->
+<!--Generated with glade3 3.4.5 on Wed Jan 14 01:06:41 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -14,6 +14,73 @@
           <widget class="GtkMenuBar" id="menubar1">
             <property name="visible">True</property>
             <child>
+              <widget class="GtkMenuItem" id="menuitem1">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_File</property>
+                <property name="use_underline">True</property>
+                <child>
+                  <widget class="GtkMenu" id="menu1">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkImageMenuItem" id="file_quit">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">gtk-quit</property>
+                        <property name="use_underline">True</property>
+                        <property name="use_stock">True</property>
+                      </widget>
+                    </child>
+                  </widget>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkMenuItem" id="menu_edit">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_Edit</property>
+                <property name="use_underline">True</property>
+                <child>
+                  <widget class="GtkMenu" id="menu2">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkImageMenuItem" id="edit_undo">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">gtk-undo</property>
+                        <property name="use_underline">True</property>
+                        <property name="use_stock">True</property>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkImageMenuItem" id="edit_redo">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">gtk-redo</property>
+                        <property name="use_underline">True</property>
+                        <property name="use_stock">True</property>
+                      </widget>
+                    </child>
+                  </widget>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkMenuItem" id="menu_view">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_View</property>
+                <property name="use_underline">True</property>
+                <child>
+                  <widget class="GtkMenu" id="menu5">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkCheckMenuItem" id="view_workview">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">_Work view</property>
+                        <property name="use_underline">True</property>
+                      </widget>
+                    </child>
+                  </widget>
+                </child>
+              </widget>
+            </child>
+            <child>
               <widget class="GtkMenuItem" id="menuitem3">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">_Tasks</property>
@@ -22,35 +89,42 @@
                   <widget class="GtkMenu" id="menu4">
                     <property name="visible">True</property>
                     <child>
-                      <widget class="GtkMenuItem" id="add_mi">
-                        <property name="visible">True</property>
-                        <property name="label" translatable="yes">Add...</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_add_task"/>
-                      </widget>
-                    </child>
-                    <child>
-                      <widget class="GtkMenuItem" id="edit_mi">
-                        <property name="visible">True</property>
-                        <property name="label" translatable="yes">Edit...</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_edit_task"/>
-                      </widget>
-                    </child>
-                    <child>
-                      <widget class="GtkMenuItem" id="delete_mi">
-                        <property name="visible">True</property>
-                        <property name="label" translatable="yes">Delete</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_delete_task"/>
-                      </widget>
-                    </child>
-                    <child>
-                      <widget class="GtkMenuItem" id="mark_done_mi">
+                      <widget class="GtkImageMenuItem" id="mark_done_mi">
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">Mark as done</property>
                         <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_mark_as_done"/>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="menu-item-image5">
+                            <property name="visible">True</property>
+                            <property name="pixbuf">task_done.png</property>
+                          </widget>
+                        </child>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkImageMenuItem" id="task_dismiss">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">_Dismiss</property>
+                        <property name="use_underline">True</property>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="menu-item-image6">
+                            <property name="visible">True</property>
+                            <property name="pixbuf">task_dismiss.png</property>
+                          </widget>
+                        </child>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkImageMenuItem" id="delete_mi">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Delete</property>
+                        <property name="use_underline">True</property>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="menu-item-image7">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-delete</property>
+                          </widget>
+                        </child>
                       </widget>
                     </child>
                   </widget>
@@ -60,7 +134,7 @@
             <child>
               <widget class="GtkMenuItem" id="menuitem4">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Aid_e</property>
+                <property name="label" translatable="yes">_Help</property>
                 <property name="use_underline">True</property>
                 <child>
                   <widget class="GtkMenu" id="menu3">
@@ -87,21 +161,10 @@
             <property name="visible">True</property>
             <property name="toolbar_style">GTK_TOOLBAR_BOTH</property>
             <child>
-              <widget class="GtkToolButton" id="new_project_b">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">New Project</property>
-                <property name="stock_id">gtk-dnd-multiple</property>
-                <signal name="clicked" handler="on_add_project"/>
-              </widget>
-              <packing>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
               <widget class="GtkToolButton" id="new_task_b">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">New Task</property>
-                <property name="stock_id">gtk-add</property>
+                <property name="label" translatable="yes">New task</property>
+                <property name="icon">task_new.png</property>
                 <signal name="clicked" handler="on_add_task"/>
               </widget>
               <packing>
@@ -109,11 +172,30 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkToolButton" id="edit_b">
+              <widget class="GtkSeparatorToolItem" id="&lt;separateur&gt;">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Edit</property>
-                <property name="stock_id">gtk-edit</property>
-                <signal name="clicked" handler="on_edit_task"/>
+              </widget>
+              <packing>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkToolButton" id="Undo">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Undo</property>
+                <property name="stock_id">gtk-undo</property>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkToolButton" id="Redo">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Redo</property>
+                <property name="stock_id">gtk-redo</property>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkSeparatorToolItem" id="toolbutton2">
+                <property name="visible">True</property>
               </widget>
               <packing>
                 <property name="homogeneous">True</property>
@@ -123,7 +205,7 @@
               <widget class="GtkToolButton" id="mark_as_done_b">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Mark as done</property>
-                <property name="stock_id">gtk-apply</property>
+                <property name="icon">task_done.png</property>
                 <signal name="clicked" handler="on_mark_as_done"/>
               </widget>
               <packing>
@@ -134,7 +216,7 @@
               <widget class="GtkToolButton" id="dismiss">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Dismiss</property>
-                <property name="stock_id">gtk-clear</property>
+                <property name="icon">task_dismiss.png</property>
                 <signal name="clicked" handler="on_dismiss_task"/>
               </widget>
               <packing>
@@ -181,20 +263,11 @@
           <widget class="GtkHPaned" id="hpaned1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="position">300</property>
+            <property name="position">200</property>
             <property name="position_set">True</property>
             <child>
               <widget class="GtkVBox" id="vbox3">
                 <property name="visible">True</property>
-                <child>
-                  <widget class="GtkTreeView" id="project_tview">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <signal name="button_press_event" handler="on_project_treeview_button_press_event"/>
-                    <signal name="row_activated" handler="on_project_selected"/>
-                    <signal name="cursor_changed" handler="on_project_selected"/>
-                  </widget>
-                </child>
                 <child>
                   <widget class="GtkTreeView" id="tag_tview">
                     <property name="visible">True</property>
@@ -203,9 +276,9 @@
                     <signal name="row_activated" handler="on_select_tag"/>
                     <signal name="cursor_changed" handler="on_select_tag"/>
                   </widget>
-                  <packing>
-                    <property name="position">1</property>
-                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </widget>
               <packing>
