--- a/GTG/plugins/tomboy/tomboy.glade
+++ b/GTG/plugins/tomboy/tomboy.glade
@@ -32,15 +32,28 @@
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
 
 	  <child>
-	    <widget class="GtkButton" id="btn_close">
+	    <widget class="GtkButton" id="btn_cancel">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label">gtk-close</property>
+	      <property name="label">gtk-cancel</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
-	      <property name="response_id">-7</property>
+	      <property name="response_id">-6</property>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkButton" id="btn_add">
+	      <property name="visible">True</property>
+	      <property name="can_default">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label">gtk-add</property>
+	      <property name="use_stock">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
+	      <property name="response_id">0</property>
 	    </widget>
 	  </child>
 	</widget>
@@ -53,15 +66,36 @@
       </child>
 
       <child>
-	<widget class="GtkComboBox" id="combobox1">
-	  <property name="height_request">36</property>
+	<widget class="GtkLabel" id="label_caption">
 	  <property name="visible">True</property>
-	  <property name="items" translatable="yes"></property>
-	  <property name="add_tearoffs">True</property>
+	  <property name="label" translatable="yes">Insert the title of the tomboy note </property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">False</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkComboBoxEntry" id="titles_combobox">
+	  <property name="visible">True</property>
+	  <property name="add_tearoffs">False</property>
+	  <property name="has_frame">True</property>
 	  <property name="focus_on_click">True</property>
-	  <accessibility>
-	    <atkproperty name="AtkObject::accessible_name" translatable="yes">Add Tomboy Note..</atkproperty>
-	  </accessibility>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
