--- a/GTG/core/plugins/pluginmanager.glade
+++ b/GTG/core/plugins/pluginmanager.glade
@@ -1,22 +1,21 @@
 <?xml version="1.0"?>
-<interface>
-  <requires lib="gtk+" version="2.16"/>
+<glade-interface>
+  <!-- interface-requires gtk+ 2.16 -->
   <!-- interface-naming-policy toplevel-contextual -->
-  <object class="GtkDialog" id="PluginManagerDialog">
+  <widget class="GtkDialog" id="PluginManagerDialog">
     <property name="width_request">670</property>
     <property name="height_request">410</property>
     <property name="visible">True</property>
     <property name="title" translatable="yes">Plugin Manager</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox2">
+      <widget class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkHBox" id="hbox3">
+          <widget class="GtkHBox" id="hbox3">
             <property name="visible">True</property>
             <child>
-              <object class="GtkScrolledWindow" id="scrolledwindow3">
+              <widget class="GtkScrolledWindow" id="scrolledwindow3">
                 <property name="width_request">240</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -24,12 +23,12 @@
                 <property name="vscrollbar_policy">automatic</property>
                 <property name="shadow_type">in</property>
                 <child>
-                  <object class="GtkTreeView" id="pluginTree">
+                  <widget class="GtkTreeView" id="pluginTree">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                  </object>
+                  </widget>
                 </child>
-              </object>
+              </widget>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
@@ -37,29 +36,28 @@
               </packing>
             </child>
             <child>
-              <object class="GtkFrame" id="frame2">
+              <widget class="GtkFrame" id="frame2">
                 <property name="visible">True</property>
                 <property name="label_xalign">0</property>
                 <property name="shadow_type">none</property>
                 <child>
-                  <object class="GtkAlignment" id="alignment2">
+                  <widget class="GtkAlignment" id="alignment2">
                     <property name="visible">True</property>
                     <property name="left_padding">12</property>
                     <child>
-                      <object class="GtkVBox" id="vbox_frame">
+                      <widget class="GtkVBox" id="vbox_frame">
                         <property name="visible">True</property>
-                        <property name="orientation">vertical</property>
                         <child>
-                          <object class="GtkHBox" id="hbox5">
+                          <widget class="GtkHBox" id="hbox5">
                             <property name="visible">True</property>
                             <child>
-                              <object class="GtkLabel" id="label10">
+                              <widget class="GtkLabel" id="label10">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="xpad">1</property>
                                 <property name="ypad">4</property>
                                 <property name="label" translatable="yes">Version: </property>
-                              </object>
+                              </widget>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
@@ -67,19 +65,19 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="lblPluginVersion">
+                              <widget class="GtkLabel" id="lblPluginVersion">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="xpad">1</property>
                                 <property name="ypad">4</property>
-                              </object>
+                              </widget>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
                                 <property name="position">1</property>
                               </packing>
                             </child>
-                          </object>
+                          </widget>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
@@ -87,16 +85,16 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkHBox" id="hbox6">
+                          <widget class="GtkHBox" id="hbox6">
                             <property name="visible">True</property>
                             <child>
-                              <object class="GtkLabel" id="label11">
+                              <widget class="GtkLabel" id="label11">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="xpad">1</property>
                                 <property name="ypad">4</property>
                                 <property name="label" translatable="yes">Authors:  </property>
-                              </object>
+                              </widget>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
@@ -104,17 +102,17 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="lblPluginAuthors">
+                              <widget class="GtkLabel" id="lblPluginAuthors">
                                 <property name="visible">True</property>
                                 <property name="wrap">True</property>
-                              </object>
+                              </widget>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
                                 <property name="position">1</property>
                               </packing>
                             </child>
-                          </object>
+                          </widget>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
@@ -122,12 +120,12 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="label14">
+                          <widget class="GtkLabel" id="label14">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="ypad">4</property>
                             <property name="label" translatable="yes">Description:</property>
-                          </object>
+                          </widget>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
@@ -135,38 +133,38 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkScrolledWindow" id="scrolledwindow4">
+                          <widget class="GtkScrolledWindow" id="scrolledwindow4">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="hscrollbar_policy">automatic</property>
                             <property name="vscrollbar_policy">automatic</property>
                             <property name="shadow_type">in</property>
                             <child>
-                              <object class="GtkTextView" id="txtPluginDescription">
+                              <widget class="GtkTextView" id="txtPluginDescription">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="editable">False</property>
                                 <property name="wrap_mode">word</property>
                                 <property name="cursor_visible">False</property>
-                              </object>
+                              </widget>
                             </child>
-                          </object>
+                          </widget>
                           <packing>
                             <property name="position">3</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkVBox" id="box_error">
+                          <widget class="GtkVBox" id="box_error">
                             <property name="visible">True</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkLabel" id="lblErrorTitle">
+                              <widget class="GtkLabel" id="lblErrorTitle">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="xpad">1</property>
                                 <property name="ypad">4</property>
                                 <property name="use_markup">True</property>
-                              </object>
+                              </widget>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
@@ -174,62 +172,65 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="lblPluginMM">
+                              <widget class="GtkLabel" id="lblPluginMM">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="xpad">1</property>
                                 <property name="ypad">4</property>
                                 <property name="wrap">True</property>
-                              </object>
+                              </widget>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
                                 <property name="position">1</property>
                               </packing>
                             </child>
-                          </object>
+                          </widget>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="position">4</property>
                           </packing>
                         </child>
-                      </object>
+                      </widget>
                     </child>
-                  </object>
+                  </widget>
                 </child>
-                <child type="label">
-                  <object class="GtkLabel" id="lblPluginName">
+                <child>
+                  <widget class="GtkLabel" id="lblPluginName">
                     <property name="visible">True</property>
                     <property name="xpad">10</property>
                     <property name="ypad">4</property>
                     <property name="label" translatable="yes">&lt;b&gt;No Plugin Selected&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
-                  </object>
+                  </widget>
+                  <packing>
+                    <property name="type">label_item</property>
+                  </packing>
                 </child>
-              </object>
+              </widget>
               <packing>
                 <property name="padding">2</property>
                 <property name="position">1</property>
               </packing>
             </child>
-          </object>
+          </widget>
           <packing>
             <property name="position">2</property>
           </packing>
         </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area2">
+          <widget class="GtkHButtonBox" id="dialog-action_area2">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="config_btn">
-                <property name="label">gtk-preferences</property>
+              <widget class="GtkButton" id="config_btn">
+                <property name="label" translatable="yes">gtk-preferences</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-              </object>
+              </widget>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
@@ -237,32 +238,29 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="close_btn">
+              <widget class="GtkButton" id="close_btn">
                 <property name="label">gtk-close</property>
+                <property name="response_id">-7</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-              </object>
+              </widget>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
-          </object>
+          </widget>
           <packing>
             <property name="expand">False</property>
             <property name="pack_type">end</property>
             <property name="position">0</property>
           </packing>
         </child>
-      </object>
+      </widget>
     </child>
-    <action-widgets>
-      <action-widget response="0">config_btn</action-widget>
-      <action-widget response="-7">close_btn</action-widget>
-    </action-widgets>
-  </object>
-</interface>
+  </widget>
+</glade-interface>
