--- a/GTG/plugins/export/export.ui
+++ b/GTG/plugins/export/export.ui
@@ -27,7 +27,7 @@
                     <property name="visible">True</property>
                     <property name="yalign">0.46000000834465027</property>
                     <property name="label" translatable="yes">Select an export template.
-All the tasks in the current 
+Only tasks in the current 
 view will be exported.</property>
                     <property name="justify">center</property>
                   </object>
@@ -50,12 +50,62 @@ view will be exported.</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="label212">
+                  <object class="GtkRadioButton" id="export_all_active_rb">
+                    <property name="label" translatable="yes">All active tasks</property>
                     <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="has_tooltip">True</property>
+                    <property name="tooltip_text" translatable="yes">Include all open tasks in the current view</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
                   </object>
                   <packing>
                     <property name="position">2</property>
                   </packing>
+                </child>
+                <child>
+                  <object class="GtkRadioButton" id="export_finished_last_week_rb">
+                    <property name="label" translatable="yes">Tasks finished last week</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="has_tooltip">True</property>
+                    <property name="tooltip_text" translatable="yes">Include only closed tasks with a closed date within the past seven days.</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">export_all_active_rb</property>
+                  </object>
+                  <packing>
+                    <property name="position">3</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkRadioButton" id="export_all_finished_rb">
+                    <property name="label" translatable="yes">All finished tasks</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="has_tooltip">True</property>
+                    <property name="tooltip_text" translatable="yes">Include all of the closed tasks from the current view.</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">export_all_active_rb</property>
+                  </object>
+                  <packing>
+                    <property name="position">4</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="label212">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="position">5</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </object>
               <packing>
